fix html validator errors, larger font on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body
   padding-bottom: 40px;
 }
 
+
 a
 {
   text-decoration: none;
@@ -126,10 +127,14 @@ a:hover
 }
 
 
+
+
+
+
 .container {
     position: relative;
     padding-top: 40px;
-    width: 85%;
+    width: 90%;
     text-align: center;
     margin: 0 auto;
 }
@@ -156,8 +161,8 @@ h2 {
 
 p {
     text-align: left;
-    font-size: 12px;
-    line-height: 16px;;
+    font-size: 14px;
+    line-height: 18px;;
     margin: 20px 8%;
 }
 
@@ -253,8 +258,8 @@ footer {
     }
 
     p {
-        font-size: 1em;
-        line-height: 1.2em;
+        font-size: 1.2em;
+        line-height: 1.4em;
     }
 
     .screen {
@@ -262,12 +267,16 @@ footer {
     }
 
     .projectTitle {
-        font-size: 1.1em;
+        font-size: 1.3em;
     }
 
     .projectLink {
-        font-size: 0.9em;
+        font-size: 1em;
     }
+
+  .projectContainer {
+    margin-bottom: 50px;
+  }
    
 
     footer {
@@ -279,7 +288,7 @@ footer {
 @media screen and (min-width: 800px) {
   
 
-  nav, .projects, .intro, .about {
+  #menuToggle, .projects, .intro, .about {
     display: none;
   }
 
@@ -317,14 +326,20 @@ footer {
 
   .bio, .projects, .largeCont {
     position: relative;
+    top: 10%;
+    right: 5%;
     width: 75%;
     right: 10%;
     left: 25%;
-    top: 10%;
+    padding-left: 20px;
   }
 
   .bio {
-    margin-top: 15%;
+    padding-top: 20vh;
+  }
+
+  .projects {
+    padding-top: 10vh;
   }
 
 
@@ -333,36 +348,36 @@ footer {
   }
 
   .large {
-      display: block;
-      margin-bottom: 2em;
+    display: block;
+    margin-bottom: 2em;
   }
 
-  .largeCont {
-      padding-top: 30vh;
+  .largeCont  {
+    padding-top: 25vh;
   }
 
   .contLinks-lg {
-      color: #ededed;
-      font-size: 2em;
-      margin: 20px;
-      text-decoration: none;
+    color: #ededed;
+    font-size: 2em;
+    margin: 20px;
+    text-decoration: none;
     
   }
 
   .projectText {
-      line-height: 1.2em;
+    line-height: 1.2em;
   }
 
   .projectTitle {
-      font-size: 1.4em;
+    font-size: 1.4em;
   }
 
   .projectContainer {
-      margin-bottom: 80px;
+    margin-bottom: 80px;
   }
 
-    footer {
-      font-size: 1em;
+  footer {
+    font-size: 1em;
   }
 
 }
